Arreglada la muestra del icono de paguina en ambos index

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Encriptador</title>
     <link rel="stylesheet" href="CSS/reset.css">
     <link rel="stylesheet" href="CSS/styleAlura.css">
-    <link rel="icon" type="Logo" href="CSS/Imagenes/Escritorio/Alura Logo.svg">
+    <link rel="icon" type="Logo" href="Imagenes/Alura Logo.svg">
 </head>
 <body>
     <header>
