--- a/indexBinario.html
+++ b/indexBinario.html
@@ -7,6 +7,7 @@
     <title>Encriptador</title>
     <link rel="stylesheet" href="CSS/reset.css">
     <link rel="stylesheet" href="CSS/styleBinario.css">
+    <link rel="icon" type="Logo" href="Imagenes/Alura Logo.svg">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300&family=Silkscreen&display=swap" rel="stylesheet">
 </head>
 <body>
